@@ -231,3 +231,7 @@ Version x.y.z
     -->PROCESSING.L2.SWEEP_DETECTION.*
        PROCESSING.L2.SWEEP_DETECTION.SBDA.END_UTC
     -->PROCESSING.L2.SWEEP_DETECTION.SBDA_SCDA_BOUNDARY_UTC
+       PROCESSING.L2.LFR.REMOVE_DATA.MUX_MODE.MARGIN_S
+    -->PROCESSING.L2.LFR.REMOVE_DATA.MUX_MODE.MARGIN_SEC
+       PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_S
+    -->PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_SEC
